2006-12-19  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/uqueue.cc: here.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Use libport/ref-pt.hh
	* src/fwd.hh: Complete.
	* src/parser/bison/ugrammar.y: Adjust.
	* src/ucallid.cc,
	* src/ucallid.hh,
	* src/ucommand.cc,
	* src/ucommand.hh,
	* src/uconnection.cc,
	* src/ueventcompound.hh,
	* src/uexpression.cc,
	* src/unamedparameters.cc,
	* src/uobj.cc,
	* src/uobject.cc,
	* src/userver.cc,
	* src/utypes.hh,
	* src/uvalue.cc,
	* src/uvalue.hh,
	* src/uvariable.cc,
	* src/uvariablelist.cc: 
	Ditto.
	Remove includes from the hh files, sort those in cc files.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Restore old ADDMEM macros
	* src/utypes.hh: here.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	ucomplaints.*
	* src/ucomplaints.cc, src/ucomplaints.hh: New.
	* src/ucommand.cc, src/uconnection.cc, src/uconnection.hh,
	* src/utypes.hh, src/Makefile.am: Adjust.

2006-12-19  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Code clean-up.
	* src/ucommand.cc: Remove useless casts. Replace unsafe casts by
          dynamic_cast.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Don't define tmpbuffer globally
	* src/ucommand.hh, src/ucommand.cc: Define it where used.
	* src/uvariablename.cc: Adjust.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Update uobject

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Shorten scopes
	* src/ucommand.cc (UCommand_ASSIGN_VALUE::execute): here.

2006-12-19  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Don't fail if valgrind was requested but can't be found.
	* tests/check-file: .

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Warn about memory instead of corruptions
	* src/uconnection.cc (received): Use a more appropriate warning here.

2006-12-19  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix test suite.
	* tests/check-file: Add missing `eval's.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Remove THESERVER